tests/ui/repr/repr-align.notwin.stderr
error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:14:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:17:14
   |
LL | #[repr(align(15))]
   |              ^^

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:20:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:27:14
   |
LL | #[repr(align(0))]
   |              ^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:33:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:36:14
   |
LL | #[repr(align(15))]
   |              ^^

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:39:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:46:14
   |
LL | #[repr(align(0))]
   |              ^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0589`.
